[package]
name = "librebbs"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
actix-web = { version = "3", features=["openssl"] }
actix-cors = "0.5.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_derive = "1.0"
jsonapi = "*"
diesel = { version = "1.4.4", features = ["mysql", "r2d2"] }
r2d2 = "0.8"
dotenv = "0.15.0"
