[package]
name = "librebbs"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
actix-web = { version = "3", features=["openssl"] }
actix-cors = "0.5.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_derive = "1.0"
diesel = { version = "1.4.4", features = ["mysql", "r2d2", "chrono"] }
chrono = "0.4"
r2d2 = "0.8"
dotenv = "0.15.0"
sentry = "0.23.0"
sentry-actix = "0.23.0"
log = "0.4.0"
env_logger = "0.8.4"
derive_more = "0.99"
jsonwebtoken = "7"
futures = "0.3.15"
time = "0.2.27"
lazy_static = "1.4.0"
